add first style to css

--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,30 @@
     <meta name="description" content="Moje CV i pokaz moich umiejętności">
     <meta name="keywords" content="Junior,CV,Programista,bez doświadczenia">
     <meta name="robots" content="follow">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Marcin Samarzewski CV</title>
 </head>
 
 <body>
+    <div class="wrapper">
+        <header>
+            <h1>Moje CV</h1>
+        </header>
+        <main>
+            <section class="experience">
+                <div class="courses">
+                    <p>Kodilla w 2021 Identyfikator poświadczenia </p>
+                    <p>ŚCIEŻKA 'WEB DEVELOPER z "Studiuje.it" </p>
+                </div>
+                <div class="work"></div>
+            </section>
+            <section class="project_gallery">
+                <div class="gallery"></div>
+            </section>
+        </main>
+        <aside></aside>
+        <footer></footer>
+    </div>
 
 </body>
 
