--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,23 @@
     <meta name="keywords" content="Junior,CV,Programista,bez doświadczenia">
     <meta name="robots" content="follow">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" type="image/x-icon" href="./images/favicon-32x32.png">
     <title>Marcin Samarzewski CV</title>
 </head>
 
 <body>
     <div class="wrapper">
+        <nav>
+            <ul>
+                <li><a href="">O mnie</a></li>
+                <li><a href="">Kursy</a></li>
+                <li><a href="">Doświadczenie Zawodowe</a></li>
+                <li><a href="">Umiejętności</a></li>
+                <li><a href="">Hobby</a></li>
+            </ul>
+        </nav>
         <header>
-            <h1>Moje CV</h1>
+
         </header>
         <main>
             <section class="experience">
