add changes in css

--- a/src/index.html
+++ b/src/index.html
@@ -19,19 +19,19 @@
             <ul>
                 <li><a href="">O mnie</a></li>
                 <li><a href="">Kursy</a></li>
-                <li><a href="">Doświadczenie Zawodowe</a></li>
+                <li><a href="">Doświadczenie</a></li>
                 <li><a href="">Umiejętności</a></li>
                 <li><a href="">Hobby</a></li>
             </ul>
         </nav>
         <header>
-
+            <div class="myphoto"></div>
         </header>
         <main>
             <section class="experience">
                 <div class="courses">
-                    <p>Kodilla w 2021 Identyfikator poświadczenia </p>
-                    <p>ŚCIEŻKA 'WEB DEVELOPER z "Studiuje.it" </p>
+                    <!-- <p>Kodilla w 2021 Identyfikator poświadczenia </p>
+                    <p>ŚCIEŻKA 'WEB DEVELOPER z "Studiuje.it" </p> -->
                 </div>
                 <div class="work"></div>
             </section>
