--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <meta name="robots" content="follow">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" type="image/x-icon" href="./images/favicon-32x32.png">
+    <script src="https://kit.fontawesome.com/a39691205b.js" crossorigin="anonymous"></script>
     <title>Marcin Samarzewski CV</title>
 </head>
 
@@ -25,7 +26,10 @@
             </ul>
         </nav>
         <header>
-            <div class="myphoto"></div>
+            <section class="firstPage">
+                <div class="myPhoto"></div>
+            </section>
+
         </header>
         <main>
             <section class="experience">
@@ -39,8 +43,25 @@
                 <div class="gallery"></div>
             </section>
         </main>
-        <aside></aside>
-        <footer></footer>
+        <!-- <aside></aside> -->
+        <footer class="socialMedia">
+
+
+            <div class="icon">
+                <a href="">
+                    <i class="forFooter fa fa-github" aria-hidden="true"></i></a>
+                <a href="">
+                    <i class="forFooter fa fa-facebook-square" aria-hidden="true"></i></a>
+                <a href="">
+                    <i class=" forFooter fa fa-linkedin-square" aria-hidden="true"></i></a>
+            </div>
+            <div class="copyright">
+                <p>Copyright © </p>
+            </div>
+            <div class="contact">
+
+            </div>
+        </footer>
     </div>
 
 </body>
