--- a/src/index.html
+++ b/src/index.html
@@ -26,44 +26,40 @@
             </ul>
         </nav>
         <header>
-            <section class="firstPage">
-                <div class="myPhoto"></div>
-            </section>
+            <div class="Page firstPhoto">
+                <div class="halfThone">
+                    <p class="first text">Czesc! Jestem Marcin <br> I jestem tu nowy, ale pasja do programowania
+                        towarzyszy mi od dawna.
+                        Dopiero teraz
+                        postanowiłem to przekuć w działanie i rozwijać swoje umiejętności. Jestem również dumny ojciec
+                        uroczych bliźniaków - dwóch chłopców, których uśmiech dodaje mi sił każdego dnia. Moja żona jest
+                        wspaniałą osobą, która wspiera mnie i tworzymy razem szczęśliwą rodzinę. To dla mnie
+                        najcenniejsza wartość. Z nadzieją patrzę w przyszłość, chcąc być wzorem dla moich dzieci i
+                        kontynuować naukę w fascynującym świecie programowania, którym od zawsze się pasjonuję.</p>
+                </div>
 
+            </div>
         </header>
         <main>
-            <section class="experience">
-                <div class="courses">
-                    <!-- <p>Kodilla w 2021 Identyfikator poświadczenia </p>
-                    <p>ŚCIEŻKA 'WEB DEVELOPER z "Studiuje.it" </p> -->
-                </div>
-                <div class="work"></div>
-            </section>
-            <section class="project_gallery">
-                <div class="gallery"></div>
-            </section>
-        </main>
-        <!-- <aside></aside> -->
-        <footer class="socialMedia">
-
-
+            <h2 class="asideSection">Moje Social Media</h2>
             <div class="icon">
-                <a href="">
-                    <i class="forFooter fa fa-github" aria-hidden="true"></i></a>
-                <a href="">
-                    <i class="forFooter fa fa-facebook-square" aria-hidden="true"></i></a>
-                <a href="">
-                    <i class=" forFooter fa fa-linkedin-square" aria-hidden="true"></i></a>
+                <a href="https://github.com/marcinsamarzewski" target="_blank">
+                    <i class="forAside fa fa-github" aria-hidden="true"><span>GitHub</span></i></a>
+                <a href="https://www.facebook.com/marcin.samarzewski.1" target="_blank">
+                    <i class="forAside fa fa-facebook-square" aria-hidden="true"><span>facebook</span></i></a>
+                <a href="https://www.linkedin.com/in/marcin-samarzewski-a5b187223/" target="_blank">
+                    <i class=" forAside fa fa-linkedin-square" aria-hidden="true"><span>linkedin</span></i></a>
             </div>
-            <div class="copyright">
-                <p>Copyright © </p>
-            </div>
+        </main>
+        <footer>
+            <p>Copyright ©</p>
             <div class="contact">
-
-            </div>
+                <i class="forContact fa fa-phone-square" aria-hidden="true"><span>663 939 290</span></i>
+                <i class="forContact fa fa-envelope" aria-hidden="true"><span>m.samarzewski1990@gmail.com</span></i>
         </footer>
-    </div>
 
+    </div>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
